Add telegram auth, add yandex auth
